Fixes a tiny gap at the top of the navbar when scrolling

--- a/client/public/assets/css/style.css
+++ b/client/public/assets/css/style.css
@@ -13,7 +13,6 @@ nav {
   background-image: url("../img/background.jpg");
   backdrop-filter: blur(5px);
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-position: center top;
   background-size: cover;
 }
